--- a/Tests/RazzieAwardsAnalyzer.Test/RazzieAwardsAnalyzer.Test.csproj
+++ b/Tests/RazzieAwardsAnalyzer.Test/RazzieAwardsAnalyzer.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -27,6 +28,13 @@
     <ProjectReference Include="..\..\Core\RazzieAwardsAnalyzer.Application\RazzieAwardsAnalyzer.Application.csproj" />
     <ProjectReference Include="..\..\Core\RazzieAwardsAnalyzer.Domain\RazzieAwardsAnalyzer.Domain.csproj" />
     <ProjectReference Include="..\..\Infra\RazzieAwardsAnalyzer.Data\RazzieAwardsAnalyzer.Data.csproj" />
+    <ProjectReference Include="..\..\Presentation\RazzieAwardsAnalyzer.API\RazzieAwardsAnalyzer.API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
