fix: Modificação de processo para cópia de arquivo csv da pasta raiz para pasta de saída.

--- a/Presentation/RazzieAwardsAnalyzer.API/RazzieAwardsAnalyzer.API.csproj
+++ b/Presentation/RazzieAwardsAnalyzer.API/RazzieAwardsAnalyzer.API.csproj
@@ -20,4 +20,11 @@
     <ProjectReference Include="..\..\Infra\RazzieAwardsAnalyzer.IoC\RazzieAwardsAnalyzer.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="..\..\FileCSV\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+
 </Project>
